Few internal refactorings
Get rid of some deprecation warnings